Added more phrases for the notices. Theme resources can now be restricted to logged in users to avoid wasting bandwidth. The template building step is now a flag to gosora.exe / Gosora.
Added build_templates.bat for test and development purposes.
Added some extra error checks to the batch files.
Fixed a compile error in the installer.
Fixed a big data race in the template transpiler and cleaned up a few loose ends.
Renamed CTemplateSet.log() to CTemplateSet.detail() to bring it in line with the /common/ logging
Renamed CTemplateSet.logf() to CTemplateSet.detailf() to bring it in line with the /common/ logging
You can now override templates in /templates/ without overwriting them by adding a modified version of a template with the same name in /templates/overrides/
Added Go Git as a dependency.
Removed config.go from the repository, you need to rely on the installer to generate this now, or make one yourself based on the implementation of it in the installer.
Travis now does tests for Go 1.10

Began work on the upgrader.

--- a/langs/english.json
+++ b/langs/english.json
@@ -231,7 +231,18 @@
 
 	"NoticePhrases": {
 		"account_banned":"Your account has been suspended. Some of your permissions may have been revoked.",
-		"account_inactive":"Your account hasn't been activated yet. Some features may remain unavailable until it is."
+		"account_inactive":"Your account hasn't been activated yet. Some features may remain unavailable until it is.",
+		"account_password_updated":"Your password was successfully updated",
+		"account_avatar_updated":"Your avatar was successfully updated",
+		"account_username_updated":"Your username was successfully updated",
+		"account_mail_disabled":"The mail system is currently disabled.",
+		"account_mail_verify_success":"Your email was successfully verified",
+
+		"panel_forum_created":"The forum was successfully created",
+		"panel_forum_deleted":"The forum was successfully deleted",
+		"panel_forum_updated":"The forum was successfully updated",
+		"panel_forum_perms_updated":"The forum permissions were successfully updated",
+		"panel_user_updated":"The user was successfully updated"
 	},
 
 	"TmplPhrases": {
