Added the menu manager and menu item editor. Refactored the menu system. Updated the README and revamped it a tad to make it easier to understand. Also, added manual instructions for patching. Revamped the update scripts, especially on Windows. Merged the CSS and Tmpl phrase namespaces. Added lastSchema to .gitignore Added DropTable to the database adapters. Implemented DbVersion in the PgSQL Adapter. Swapped out the checkboxes for cleaner looking yes-no dropdowns. Began revamping small bits of the user logic.
We now open to contributions, just open a pull request and sign the CLA.
Schema has been updated, run the patcher or update script.

--- a/langs/english.json
+++ b/langs/english.json
@@ -93,6 +93,8 @@
 		"panel_groups":"Group Manager",
 		"panel_edit_group":"Group Editor",
 		"panel_themes":"Theme Manager",
+		"panel_themes_menus":"Menu Manager",
+		"panel_themes_menus_edit":"Menu Editor",
 		"panel_backups":"Backups",
 		"panel_mod_logs":"Moderation Logs",
 		"panel_admin_logs":"Administration Logs",
@@ -246,6 +248,66 @@
 	},
 
 	"TmplPhrases": {
+		"pipe":"|",
+
+		"menu_forums":"Forums",
+		"menu_topics":"Topics",
+		"menu_alerts":"Alerts",
+		"menu_account":"Account",
+		"menu_profile":"Profile",
+		"menu_panel":"Panel",
+		"menu_logout":"Logout",
+		"menu_login":"Login",
+		"menu_register":"Register",
+
+		"topics_click_topics_to_select":"Click the topics to select them",
+		"topics_new_topic":"New Topic",
+		"forum_locked":"Locked",
+		"topics_replies_suffix":" replies",
+		"forums_topics_suffix":" topics",
+		"topics_gap_likes_suffix":" likes",
+		"topics_likes_suffix":"likes",
+		"topics_last":"Last",
+		"topics_starter":"Starter",
+		"topic_like_count_suffix":" likes",
+		"topic_plus":"+",
+		"topic_plus_one":"+1",
+		"topic_gap_up":" up",
+		"topic_level":"Level",
+		"topic_edit_button_text":"Edit",
+		"topic_delete_button_text":"Delete",
+		"topic_ip_button_text":"IP",
+		"topic_lock_button_text":"Lock",
+		"topic_unlock_button_text":"Unlock",
+		"topic_pin_button_text":"Pin",
+		"topic_unpin_button_text":"Unpin",
+		"topic_report_button_text":"Report",
+		"topic_flag_button_text":"Flag",
+
+		"panel_rank_admins":"Admins",
+		"panel_rank_mods":"Mods",
+		"panel_rank_banned":"Banned",
+		"panel_rank_guests":"Guests",
+		"panel_rank_members":"Members",
+
+		"panel_preset_announcements":"Announcements",
+		"panel_preset_member_only":"Member Only",
+		"panel_preset_staff_only":"Staff Only",
+		"panel_preset_admin_only":"Admin Only",
+		"panel_preset_archive":"Archive",
+		"panel_preset_public":"Public",
+		"panel_active_hidden":"Hidden",
+
+		"panel_perms_no_access":"No Access",
+		"panel_perms_read_only":"Read Only",
+		"panel_perms_can_post":"Can Post",
+		"panel_perms_can_moderate":"Can Moderate",
+		"panel_perms_custom":"Custom",
+		"panel_perms_default":"Default",
+
+		"panel_edit_button_text":"Edit",
+		"panel_delete_button_text":"Delete",
+		
 		"menu_forums_tooltip":"Forum List",
 		"menu_forums_aria":"The Forum list",
 		"menu_topics_tooltip":"Topic List",
@@ -639,6 +701,25 @@
 		"panel_themes_default":"Default",
 		"panel_themes_make_default":"Make Default",
 
+		"panel_themes_menus_head":"Menus",
+
+		"panel_themes_menus_edit_head":"Menu Editor",
+		"panel_themes_menus_name":"Name",
+		"panel_themes_menus_htmlid":"HTML ID",
+		"panel_themes_menus_cssclass":"CSS Class",
+		"panel_themes_menus_position":"Position",
+		"panel_themes_menus_path":"Path",
+		"panel_themes_menus_aria":"Aria",
+		"panel_themes_menus_tooltip":"Tooltip",
+		"panel_themes_menus_tmplname":"Template",
+		"panel_themes_menus_permissions":"Who Can See",
+		"panel_themes_menus_everyone": "Everyone",
+		"panel_themes_menus_guestonly":"Guests",
+		"panel_themes_menus_memberonly":"Members",
+		"panel_themes_menus_supermodonly":"Super Mods",
+		"panel_themes_menus_adminonly":"Admins",
+		"panel_themes_menus_edit_update_button":"Update",
+
 		"panel_settings_head":"Settings",
 		"panel_setting_head":"Edit Setting",
 		"panel_setting_name":"Setting Name",
@@ -654,67 +735,5 @@
 		"panel_debug_uptime_label":"Uptime",
 		"panel_debug_open_database_connections_label":"Open DB Conns",
 		"panel_debug_adapter_label":"Adapter"
-	},
-
-	"CSSPhrases": {
-		"pipe":"|",
-
-		"menu_forums":"Forums",
-		"menu_topics":"Topics",
-		"menu_alerts":"Alerts",
-		"menu_account":"Account",
-		"menu_profile":"Profile",
-		"menu_panel":"Panel",
-		"menu_logout":"Logout",
-		"menu_login":"Login",
-		"menu_register":"Register",
-
-		"topics_click_topics_to_select":"Click the topics to select them",
-		"topics_new_topic":"New Topic",
-		"forum_locked":"Locked",
-		"topics_replies_suffix":" replies",
-		"forums_topics_suffix":" topics",
-		"topics_gap_likes_suffix":" likes",
-		"topics_likes_suffix":"likes",
-		"topics_last":"Last",
-		"topics_starter":"Starter",
-		"topic_like_count_suffix":" likes",
-		"topic_plus":"+",
-		"topic_plus_one":"+1",
-		"topic_gap_up":" up",
-		"topic_level":"Level",
-		"topic_edit_button_text":"Edit",
-		"topic_delete_button_text":"Delete",
-		"topic_ip_button_text":"IP",
-		"topic_lock_button_text":"Lock",
-		"topic_unlock_button_text":"Unlock",
-		"topic_pin_button_text":"Pin",
-		"topic_unpin_button_text":"Unpin",
-		"topic_report_button_text":"Report",
-		"topic_flag_button_text":"Flag",
-
-		"panel_rank_admins":"Admins",
-		"panel_rank_mods":"Mods",
-		"panel_rank_banned":"Banned",
-		"panel_rank_guests":"Guests",
-		"panel_rank_members":"Members",
-
-		"panel_preset_announcements":"Announcements",
-		"panel_preset_member_only":"Member Only",
-		"panel_preset_staff_only":"Staff Only",
-		"panel_preset_admin_only":"Admin Only",
-		"panel_preset_archive":"Archive",
-		"panel_preset_public":"Public",
-		"panel_active_hidden":"Hidden",
-
-		"panel_perms_no_access":"No Access",
-		"panel_perms_read_only":"Read Only",
-		"panel_perms_can_post":"Can Post",
-		"panel_perms_can_moderate":"Can Moderate",
-		"panel_perms_custom":"Custom",
-		"panel_perms_default":"Default",
-
-		"panel_edit_button_text":"Edit",
-		"panel_delete_button_text":"Delete"
 	}
 }
