--- a/langs/english.json
+++ b/langs/english.json
@@ -701,15 +701,21 @@
 		"panel_themes_make_default":"Make Default",
 
 		"panel_themes_menus_head":"Menus",
+		"panel_themes_menus_item_edit_button_aria":"Edit menu item",
+		"panel_themes_menus_item_delete_button_aria":"Delete menu item",
 
 		"panel_themes_menus_edit_head":"Menu Editor",
+		"panel_themes_menus_create_head":"Create Menu Item",
 		"panel_themes_menus_name":"Name",
+		"panel_themes_menus_name_placeholder":"Item Name",
 		"panel_themes_menus_htmlid":"HTML ID",
 		"panel_themes_menus_cssclass":"CSS Class",
 		"panel_themes_menus_position":"Position",
 		"panel_themes_menus_path":"Path",
 		"panel_themes_menus_aria":"Aria",
+		"panel_themes_menus_aria_placeholder":"Short description for helping those with poor vision",
 		"panel_themes_menus_tooltip":"Tooltip",
+		"panel_themes_menus_tooltip_placeholder":"A tooltip shown when you hover over it",
 		"panel_themes_menus_tmplname":"Template",
 		"panel_themes_menus_permissions":"Who Can See",
 		"panel_themes_menus_everyone": "Everyone",
@@ -718,6 +724,7 @@
 		"panel_themes_menus_supermodonly":"Super Mods",
 		"panel_themes_menus_adminonly":"Admins",
 		"panel_themes_menus_edit_update_button":"Update",
+		"panel_themes_menus_create_button":"Create",
 
 		"panel_settings_head":"Settings",
 		"panel_setting_head":"Edit Setting",
