Added the registration logs.
Tweaked the h1 CSS for the Control Panel in Cosora.
Improved the support for autocompleters.
Reverted some of the int64s back to ints.
The per-request user variable should now have the IPs for guests.
Removed some obsolete statements.
Removed a couple obsolete phrases.
Moved a couple more accumulator initializers out of the store initializers.
Refactored one of the report statements to use a store instead of a statement.
Created the menuhead CSS class.
Added the GetOffset method to the LogStore interface and refactored the mod and admin log pages to use it.
Changed the labels on the adminlog and modlog pages to make them more understandable.
Removed the generated templates from Git.

Run the patcher / update script to get the new table.

--- a/langs/english.json
+++ b/langs/english.json
@@ -96,8 +96,9 @@
 		"panel_themes_menus":"Menu Manager",
 		"panel_themes_menus_edit":"Menu Editor",
 		"panel_backups":"Backups",
-		"panel_mod_logs":"Moderation Logs",
-		"panel_admin_logs":"Administration Logs",
+		"panel_registration_logs":"Registration Logs",
+		"panel_mod_logs":"Mod Action Logs",
+		"panel_admin_logs":"Admin Action Logs",
 		"panel_debug":"Debug"
 	},
 
@@ -547,8 +548,9 @@
 		"panel_menu_statistics_referrers":"Referrers",
 		"panel_menu_reports":"Reports",
 		"panel_menu_logs":"Logs",
-		"panel_menu_logs_moderators":"Moderators",
-		"panel_menu_logs_administrators":"Administrators",
+		"panel_menu_logs_registrations":"Registrations",
+		"panel_menu_logs_moderators":"Mod Actions",
+		"panel_menu_logs_administrators":"Admin Actions",
 		"panel_menu_system":"System",
 		"panel_menu_plugins":"Plugins",
 		"panel_menu_backups":"Backups",
@@ -680,10 +682,12 @@
 		"panel_statistics_operating_systems_no_operating_systems":"No operating systems could be found in the selected time range",
 
 		"panel_logs_menu_head":"Logs",
-		"panel_logs_menu_moderation":"Moderation Logs",
-		"panel_logs_menu_administration":"Administration Logs",
-		"panel_logs_moderation_head":"Moderation Logs",
-		"panel_logs_administration_head":"Administration Logs",
+		"panel_logs_registration_head":"Registrations",
+		"panel_logs_registration_attempt":"Attempt",
+		"panel_logs_registration_email":"email",
+		"panel_logs_registration_reason":"reason",
+		"panel_logs_moderation_head":"Mod Action Logs",
+		"panel_logs_administration_head":"Admin Action Logs",
 
 		"panel_plugins_head":"Plugins",
 		"panel_plugins_author_prefix":"Author: ",
