Began work on the Nox Theme. Removed the Tempra Cursive Theme. You can now do bulk moderation actions with Shadow.
Added:
Argon2 as a dependency.
The EmailStore.
The ReportStore.
The Copy method to *Setting.
The AddColumn method to the query builder and adapters.
The textarea setting type.
More logging to better debug issues.
The GetOffset method to the UserStore.

Removed:
Sortable from Code Climate's Analysis.
MemberCheck and memberCheck as they're obsolete now.
The obsolete url_tags setting.
The BcryptGeneratePasswordNoSalt function.
Some redundant fields from some of the page structs.

Revamped:
The Control Panel Setting List and Editor.

Refactored:
The password hashing logic to make it more amenable to multiple hashing algorithms.
The email portion of the Account Manager.
The Control Panel User List.
The report system.
simplePanelUserCheck and simpleUserCheck to remove the duplicated logic as the two do the exact same thing.

Fixed:
Missing slugs in the profile links in the User Manager.
A few template initialisers potentially reducing the number of odd template edge cases.
Some problems with the footer.
Custom selection colour not applying to images on Shadow.
The avatars of the bottom row of the topic list on Conflux leaking out.

Other:
Moved the startTime variable into package common and exported it.
Moved the password hashing logic from user.go to auth.go
Split common/themes.go into common/theme.go and common/theme_list.go
Replaced the SettingLabels phrase category with the more generic SettingPhrases category.
Moved a load of routes, including panel ones into the routes and panel packages.
Hid the notifications link from the Account Menu.
Moved more inline CSS into the CSS files and made things a little more flexible here and there.
Continued work on PgSQL, still a ways away.
Guests now have a default avatar like everyone else.
Tweaked some of the font sizes on Cosora to make the text look a little nicer.
Partially implemented the theme dock override log

--- a/langs/english.json
+++ b/langs/english.json
@@ -44,8 +44,12 @@
 		"MoveTopic": "Can move topics in or out"
 	},
 
-	"SettingLabels": {
-		"activation_type": "Activate All,Email Activation,Admin Approval"
+	"SettingPhrases": {
+		"activation_type":"Activation Type",
+		"activation_type_label": "Activate All,Email Activation,Admin Approval",
+		"bigpost_min_words":"Big Post Minimum Words",
+		"megapost_min_words":"Mega Post Minimum Words",
+		"meta_desc":"Meta Description"
 	},
 
 	"PermPresets": {
@@ -263,6 +267,7 @@
 		"topics_click_topics_to_select":"Click the topics to select them",
 		"topics_new_topic":"New Topic",
 		"forum_locked":"Locked",
+		"topics_moderate":"Moderate",
 		"topics_replies_suffix":" replies",
 		"forums_topics_suffix":" topics",
 		"topics_gap_likes_suffix":" likes",
