Build artifacts are now cleaned up on Windows too. Tests should be a lot less noisy now.
Fixed a bug where BulkGetMap didn't return any users if you opted out of using a memory cache for the user store.
Used new() in a few more places.
Fixed a test which didn't work properly.
Tweaked the panel_pages_no_pages phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -662,7 +662,7 @@
 		"panel_pages_head":"Page Manager",
 		"panel_pages_edit_button_aria":"Edit Page",
 		"panel_pages_delete_button_aria":"Delete Page",
-		"panel_pages_no_pages":"There aren't any pages.",
+		"panel_pages_no_pages":"You don't have any pages yet.",
 		"panel_pages_create_head":"Create Page",
 		"panel_pages_create_name":"Name",
 		"panel_pages_create_name_placeholder":"faq",
